--- a/src/components/Botones.css
+++ b/src/components/Botones.css
@@ -136,7 +136,7 @@ button {
     flex-direction: column;
     background-color: transparent;
     justify-content: center;
-    display: flex; /* Asegúrate de que sea flex */
+    display: flex; /* Asegúrate de que sea flexx */
     gap: 8vh; /* Espacio entre los bloques .apps y .reproductor */
   }
 
